2009-08-20 Pierre Wieser <pwieser@trychlos.org>

	Display actions as a submenu.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h: New files.
	Manage preferences which are used by Nautilus-Actions plugin.

	* src/common/na-gconf.c: Fix typo.

	* src/nact/nact-imenubar.c:
	Add an item in the menubar to run the Preferences dialog.
	Rename MenuBarVBox to MenubarVBox to be consistent with Statusbar.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h: Fix typos.

	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-preferences-editor.h: New files.
	Let the user edit its preferences.

	* src/nact/nautilus-actions-config-tool.ui:
	Creates the PreferencesDialog dialog.
	Enabled and ReadOnly checkboxes no longer expand to all dialog
	width to minimize focus errors.
	Rename MenuBarVBox to MenubarVBox to be consistent with Statusbar.

	* src/common/Makefile.am:
	* src/nact/Makefile.am: Updated accordingly.

	* src/plugin/nautilus-actions.c:
	Take into account the DisplayAsSubmenu preference.

2009-08-19 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-statusbar.c:
	* src/nact/nact-statusbar.h: New files.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h:
	* src/nact/nact-imenubar.c:
	* src/nact/nact-imenubar.h:
	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h:
	Updated to take advantage of new nact_statusbar_display_status()
	and nact_statusbar_hide_status() functions.
	Removed get_status_bar() virtual functions from the interfaces.

2009-08-18 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application-class.h:
	* src/nact/base-application.c:
	* src/nact/base-application.h:
	Rewrite BaseApplication base class, and document all public
	and virtual functions.
	Define exit codes when an error occurs.
	Define some standard error messages.

	* src/nact/nact-application.c:
	* src/nact/nact-application.h
	(appli_initialize_unique_app): Customize error message.