@@ -38,7 +38,7 @@
 #include "nact-application.h"
 #include "nact-main-window.h"
 
-#define GLADE_FILENAME				GLADEDIR "/nautilus-actions-config-tool.ui"
+#define UI_XML_FILENAME				PKGDATADIR "/nautilus-actions-config-tool.ui"
 
 /* private class data
  */
@@ -339,7 +339,7 @@ appli_get_unique_app_name( BaseApplication *application )
 static gchar *
 appli_get_gtkbuilder_filename( BaseApplication *application )
 {
-	return( g_strdup( GLADE_FILENAME ));
+	return( g_strdup( UI_XML_FILENAME ));
 }
 
 /*
